# miscservices_pasteboard

./: BUILD.gn  README.en.md  README.md  README_ZH.md  README_zh.md  bundle.json  pasteboard.gni  pasteboardEvent.yaml
etc/init/: BUILD.gn  pasteboardservice.cfg  pasteboardservice.rc
framework/innerkits/: BUILD.gn
framework/innerkits/include/: paste_data.h  paste_data_record.h  pasteboard_client.h  pasteboard_observer.h
framework/innerkits/src/: paste_data.cpp  paste_data_record.cpp  pasteboard_client.cpp  pasteboard_observer.cpp
interfaces/declaration/: BUILD.gn
interfaces/declaration/api/: @ohos.pasteboard.d.ts
interfaces/kits/: BUILD.gn
interfaces/kits/napi/include/: napi_init.h  pasteboard_common.h  pastedata_napi.h  pastedata_record_napi.h  systempasteboard_napi.h
interfaces/kits/napi/src/: napi_init.cpp  napi_pasteboard.cpp  napi_pastedata.cpp  napi_pastedata_record.cpp  pasteboard_common.cpp
profile/: 3701.xml  BUILD.gn
services/: BUILD.gn
services/core/include/: i_pasteboard_observer.h  i_pasteboard_service.h  i_pasteboard_storage.h  pasteboard_service.h  pasteboard_storage.h
services/core/src/: pasteboard_service.cpp  pasteboard_storage.cpp
services/dfx/src/: calculate_time_consuming.cpp  calculate_time_consuming.h  command.cpp  command.h  dfx_code_constant.h  dfx_types.h  hiview_adapter.cpp  hiview_adapter.h  pasteboard_dump_helper.cpp  pasteboard_dump_helper.h  pasteboard_trace.cpp  pasteboard_trace.h  reporter.cpp  reporter.h
services/dfx/src/behaviour/: behaviour_reporter.h  pasteboard_behaviour_reporter_impl.cpp  pasteboard_behaviour_reporter_impl.h
services/dfx/src/fault/: fault_reporter.h  initialization_fault_impl.cpp  initialization_fault_impl.h
services/dfx/src/statistic/: statistic_reporter.h  time_consuming_statistic_impl.cpp  time_consuming_statistic_impl.h
services/test/: BUILD.gn
services/test/unittest/include/: paste_service_test.h  pasteboard_observer_callback.h
services/test/unittest/src/: paste_service_test.cpp
services/zidl/include/: pasteboard_observer_proxy.h  pasteboard_observer_stub.h  pasteboard_service_proxy.h  pasteboard_service_stub.h
services/zidl/src/: pasteboard_observer_proxy.cpp  pasteboard_observer_stub.cpp  pasteboard_service_proxy.cpp  pasteboard_service_stub.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/pasteboardservice_fuzzer/: BUILD.gn  pasteboardservice_fuzzer.cpp  pasteboardservice_fuzzer.h
utils/: BUILD.gn
utils/mock/include/: mock_permission.h
utils/mock/src/: mock_permission.cpp
utils/native/include/: pasteboard_common.h  pasteboard_hilog_wreapper.h  pasteboard_permission.h  pasteboard_sp_singleton.h
utils/native/src/: pasteboard_permission.cpp
