# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

ability_runtime_napi_path =
    "//foundation/ability/ability_runtime/frameworks/js/napi/aafwk"

pasteboard_root_path = "//base/miscservices/pasteboard"

pasteboard_kits_path = "${pasteboard_root_path}/kits"

pasteboard_innerkits_path = "${pasteboard_root_path}/framework/innerkits"

pasteboard_utils_path = "${pasteboard_root_path}/utils"

pasteboard_service_path = "${pasteboard_root_path}/services"
