# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/miscservices/pasteboard/pasteboard.gni")
import("//build/ohos.gni")

config("pasteboard_service_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "zidl/include",
    "core/include",
    "${pasteboard_innerkits_path}/include",
    "//utils/system/safwk/native/include",
    "//third_party/json/include",
    "${pasteboard_utils_path}/mock/include",
    "${pasteboard_utils_path}/native/include",
  ]

  cflags_cc = [ "-fexceptions" ]
}

ohos_shared_library("pasteboard_service") {
  sources = [
    "${pasteboard_utils_path}/mock/src/mock_permission.cpp",
    "${pasteboard_utils_path}/native/src/pasteboard_permission.cpp",
    "core/src/pasteboard_service.cpp",
    "zidl/src/pasteboard_observer_proxy.cpp",
    "zidl/src/pasteboard_observer_stub.cpp",
    "zidl/src/pasteboard_service_proxy.cpp",
    "zidl/src/pasteboard_service_stub.cpp",
  ]
  public_configs = [
    "//utils/native/base:utils_config",
    ":pasteboard_service_config",
  ]
  deps = [
    "${pasteboard_innerkits_path}:pasteboard_client",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/aafwk/standard/interfaces/innerkits/intent:intent",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
  subsystem_name = "miscservices"
  part_name = "pasteboard_native"
}
