# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/miscservices/pasteboard/pasteboard.gni")
import("//build/ohos.gni")

config("pasteboard_service_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "zidl/include",
    "core/include",
    "${pasteboard_innerkits_path}/include",
    "//utils/system/safwk/native/include",
    "//third_party/json/include",
    "${pasteboard_utils_path}/mock/include",
    "${pasteboard_utils_path}/native/include",

    "//base/miscservices/pasteboard/services/dfx/src",
    "//base/miscservices/pasteboard/utils/native/include",
    "//utils/native/base/include",
    "//base/miscservices/pasteboard/services/dfx/src/behaviour",
    "//base/miscservices/pasteboard/services/dfx/src/statistic",
    "//base/miscservices/pasteboard/services/dfx/src/fault",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core/include/bundlemgr",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_base/include",
  ]

  cflags_cc = [ "-fexceptions" ]
}

ohos_shared_library("pasteboard_service") {
  sources = [
    "${pasteboard_utils_path}/mock/src/mock_permission.cpp",
    "${pasteboard_utils_path}/native/src/pasteboard_permission.cpp",
    "//base/miscservices/pasteboard/services/dfx/src/command.cpp",
    "//base/miscservices/pasteboard/services/dfx/src/pasteboard_dump_helper.cpp",
    "//base/miscservices/pasteboard/services/dfx/src/pasteboard_trace.cpp",
    "core/src/pasteboard_service.cpp",
    "zidl/src/pasteboard_observer_proxy.cpp",
    "zidl/src/pasteboard_observer_stub.cpp",
    "zidl/src/pasteboard_service_proxy.cpp",
    "zidl/src/pasteboard_service_stub.cpp",
    "//base/miscservices/pasteboard/services/dfx/src/hiview_adapter.cpp",
    "//base/miscservices/pasteboard/services/dfx/src/time_consuming.cpp",
    "//base/miscservices/pasteboard/services/dfx/src/reporter.cpp",
    "//base/miscservices/pasteboard/services/dfx/src/statistic/time_consuming_statistic_impl.cpp",
    "//base/miscservices/pasteboard/services/dfx/src/fault/initialization_fault_impl.cpp",
    "//base/miscservices/pasteboard/services/dfx/src/behaviour/pasteboard_behaviour_reporter_impl.cpp",
  ]
  public_configs = [
    "//utils/native/base:utils_config",
    ":pasteboard_service_config",
  ]
  deps = [
    "${pasteboard_innerkits_path}:pasteboard_client",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core:appexecfwk_core",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "ability_runtime:abilitykit_native",
    "eventhandler:libeventhandler",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hitrace_native:libhitrace",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
  subsystem_name = "miscservices"
  part_name = "pasteboard_native"
}
