# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/miscservices/pasteboard/pasteboard.gni")
import("//build/ohos.gni")

config("pasteboard_client_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "${pasteboard_service_path}/core/include",
    "${pasteboard_service_path}/zidl/include",
    "include",
    "//utils/native/base/include",
    "${pasteboard_utils_path}/native/include",
  ]
}

ohos_shared_library("pasteboard_client") {
  sources = [
    "${pasteboard_service_path}/zidl/src/pasteboard_observer_proxy.cpp",
    "${pasteboard_service_path}/zidl/src/pasteboard_observer_stub.cpp",
    "${pasteboard_service_path}/zidl/src/pasteboard_service_proxy.cpp",
    "${pasteboard_service_path}/zidl/src/pasteboard_service_stub.cpp",
    "src/paste_data.cpp",
    "src/paste_data_record.cpp",
    "src/pasteboard_client.cpp",
    "src/pasteboard_observer.cpp",
  ]
  configs = [ ":pasteboard_client_config" ]
  public_configs = [ ":pasteboard_client_config" ]
  deps = [
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/aafwk/standard/interfaces/innerkits/uri:zuri",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/aafwk/standard/interfaces/kits/napi/aafwk/inner/napi_common:napi_common",
    "//third_party/jsoncpp:jsoncpp",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
  ]

  subsystem_name = "miscservices"
  part_name = "pasteboard_native"
}
