# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/miscservices/pasteboard/pasteboard.gni")
import("//build/ohos.gni")

ohos_shared_library("pasteboard_napi") {
  include_dirs = [
    "//base/miscservices/pasteboard/framework/innerkits/include",
    "napi/include",
  ]

  cflags = [
    "-fPIC",
    "-g3",
  ]

  sources = [
    "napi/src/napi_init.cpp",
    "napi/src/napi_pasteboard.cpp",
    "napi/src/napi_pastedata.cpp",
    "napi/src/napi_pastedata_record.cpp",
  ]

  deps = [
    "//base/miscservices/pasteboard/framework/innerkits:pasteboard_client",
    "//base/miscservices/pasteboard/services:pasteboard_service",
    "//foundation/aafwk/standard/frameworks/kits/ability/native:abilitykit_native",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/aafwk/standard/interfaces/innerkits/intent:intent",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//foundation/ace/napi/:ace_napi",
    "//foundation/distributedschedule/dmsfwk/interfaces/innerkits/uri:zuri",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"

  subsystem_name = "miscservices"
  part_name = "pasteboard_native"
}
