# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/miscservices/pasteboard/pasteboard.gni")
import("//build/test.gni")

config("module_private_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "${pasteboard_innerkits_path}/include",
    "include",
    "unittest/include",
  ]
}

module_output_path = "pasteboard_native/pasteboard_service"

ohos_unittest("PasteboardServiceTest") {
  module_out_path = module_output_path

  sources = [ "unittest/src/paste_service_test.cpp" ]
  configs = [
    "//utils/native/base:utils_config",
    ":module_private_config",
  ]
  external_deps = [
    "ability_base:zuri",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  deps = [
    "${pasteboard_innerkits_path}:pasteboard_client",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/aafwk/standard/interfaces/innerkits/intent:intent",
    "//foundation/aafwk/standard/interfaces/innerkits/want:want",
    "//third_party/googletest:gtest_main",
    "//utils/native/base:utils",
  ]
}

group("unittest") {
  testonly = true

  deps = []

  deps += [ ":PasteboardServiceTest" ]
}
