# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/distributeddatamgr/pasteboard/pasteboard.gni")

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")

##############################fuzztest##########################################
ohos_fuzztest("PasteboardServiceFuzzTest") {
  module_out_path = "distributeddatamgr/pasteboard"

  fuzz_config_file = "//foundation/distributeddatamgr/pasteboard/test/fuzztest/pasteboardservice_fuzzer"

  configs = [ "//foundation/distributeddatamgr/pasteboard/services:pasteboard_service_config" ]

  include_dirs = [
    "//foundation/distributeddatamgr/pasteboard/services/zidl/include",
    "//foundation/distributeddatamgr/pasteboard/services/core/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "pasteboardservice_fuzzer.cpp" ]

  deps = [
    "${pasteboard_innerkits_path}:pasteboard_client",
    "//foundation/bundlemanager/bundle_framework/interfaces/inner_api/appexecfwk_core:appexecfwk_core",
    "//foundation/distributeddatamgr/pasteboard/services:pasteboard_service",
    "//utils/native/base:utils",
  ]

  external_deps = [
    "ability_base:want",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":PasteboardServiceFuzzTest",
  ]
}
###############################################################################
